--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyD-ScwTrJrIgiO_mXhhwjdF--IDDhekeFM
-REACT_APP_API_BASE_URL=http://localhost:5001/api
+REACT_APP_API_BASE_URL=https://tripersona-ai-travel-map-website-backend.onrender.com/api
