--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=5001
 MONGODB_URI=mongodb+srv://tracyshen301:Tracy40807539！@cluster0.lpy3puy.mongodb.net/teamTravelMap?retryWrites=true&w=majority
 GOOGLE_GEOCODING_API_KEY=AIzaSyD-ScwTrJrIgiO_mXhhwjdF--IDDhekeFM
+CLOUDINARY_URL=cloudinary://139265195557344:5vVNmxg5CfJiB6CQoOds2pPbKP8@dpbwovnrm
